# concurrently

./: .gitignore  CLAUDE.md  Cargo.toml  package.json  sveltui-build
src/: App.svelte  agent.rs  api.rs  app.rs  main.rs  main.ts  orchestrator.rs  ui.rs
src/lib/: agent.ts  state.svelte.ts
