[package]
name = "concurrently"
version = "0.1.0"
edition = "2024"
description = "Concurrent subagent workflow TUI - like Claude Code, but parallel"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
textwrap = "0.16"
color-eyre = "0.6"
